# ArchDispatch

./: .gitmodules  CMakeLists.txt  LICENSE.md
cmake/: SetArch.cmake
examples/: build.sh  for_loop.cpp  simple.cpp
src/ArchDispatch/: ArchDispatch.cpp  ArchDispatch.h
